--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <h2 class="section-title">À propos de moi</h2>
                 <div class="about-grid">
                     <div class="about-avatar">
-                        <img src="avatar.png" alt="Elias Bardes Avatar" class="profile-img">
+                        <img src="/avatar.png" alt="Elias Bardes Avatar" class="profile-img">
                     </div>
                     <div class="about-content">
                         <div class="about-card">
